# carbonhotkey-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_register_hotkey.rs  02_async_hotkey_stream.rs  02_event_handler_install.rs  03_key_code_mapping.rs  04_modifier_flags.rs
src/: async_api.rs  bridge_ffi.rs  error.rs  event_handler.rs  key_code.rs  lib.rs  modifier_flags.rs
src/ffi/: mod.rs
src/hotkey/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CarbonHotKeyBridge/: AsyncStream.swift  EventHandler.swift  HotKey.swift  KeyCode.swift  ModifierFlags.swift
swift-bridge/Sources/CarbonHotKeyBridge/include/: CarbonHotKeyBridge.h
tests/: api_coverage.rs  async_stream_tests.rs  event_handler_tests.rs  hotkey_tests.rs  key_code_tests.rs  modifier_flags_tests.rs
